fix: invisible colors on dark mode

--- a/components/atoms/chatMessage/chatMessage.module.scss
+++ b/components/atoms/chatMessage/chatMessage.module.scss
@@ -21,6 +21,7 @@
     font-size: 0.75rem;
     text-align: right;
     width: 7rem;
+    color: var(--text-black);
 }
 
 .timeReceiver {
@@ -50,6 +51,9 @@
         order: 2;
     }
 
+    svg {
+        color: var(--text-black);
+    }
 
 }
 
